--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ else window.addEventListener('load', __ldinsp, false);
 	      User Centered Designer
 	    </div>
 	  <div class="centered">
-	  <img class="screens" src="img/3screens.png">
+	  <img class="screens" src="https://cloud.githubusercontent.com/assets/7109481/10264169/da094be6-69c1-11e5-9d62-d7eb39e2c15f.png">
 	    <div class="heading_title">
 	    	Everyone Deserves a Great Experience
 	    </div>
@@ -64,32 +64,32 @@ else window.addEventListener('load', __ldinsp, false);
   	</div>
   	  <div class="images">
 
-  	  	<a href="img/DCUSidenav2.png" data-lightbox="image-10" data-title="Approving videos to be captioned"><img src="img/DCUSidenav.png"></a>
+  	  	<a href="https://cloud.githubusercontent.com/assets/7109481/10264160/d9ea8fd0-69c1-11e5-90f9-7bf3f6fb8cf9.png" data-lightbox="image-10" data-title="Approving videos to be captioned"><img src="https://cloud.githubusercontent.com/assets/7109481/10264161/d9ee666e-69c1-11e5-825d-c2791184074e.png"></a>
 
-  	  	<a href="img/DFquickstart.png" data-lightbox="image-2" data-title="Digifit Redesign Concept"><img src="img/DFquickstart.png"></a>
+  	  	<a href="https://cloud.githubusercontent.com/assets/7109481/10264163/d9f3d2d4-69c1-11e5-8df4-a4aff2462091.png" data-lightbox="image-2" data-title="Digifit Redesign Concept"><img src="https://cloud.githubusercontent.com/assets/7109481/10264163/d9f3d2d4-69c1-11e5-8df4-a4aff2462091.png"></a>
 
-  		<a href="img/TIPPTLandingPage2.png" data-lightbox="image-1" data-title="I designed &amp; built this web app as my final project for DevMountain"><img src="img/TIPPTlanding.png"></a>
+  		<a href="https://cloud.githubusercontent.com/assets/7109481/10264180/da325dd8-69c1-11e5-89a2-2fd15714e952.png" data-lightbox="image-1" data-title="I designed &amp; built this web app as my final project for DevMountain"><img src="https://cloud.githubusercontent.com/assets/7109481/10264185/da43363a-69c1-11e5-8932-ef7e7db860af.png"></a>
 
   		<!-- <a href="img/TIPPTCreateanEvent2.png" data-lightbox="image-1" data-title="The app allows you to create crowdsourced events"><img src="img/TIPPTcreate.png"></a> -->
 
   		<!-- <a href="img/TIPPTworks2.png" data-lightbox="image-1" data-title="My goal was to keep it to one page. This is the about section"><img src="img/TIPPTabout.png"></a> -->
 
-	  	<a href="img/FundAccountHierarchy.png" data-lightbox="image-7" data-title="A screenshot from our Fund Accounting product"><img src="img/FundAccountHierarchy.png" id="xtrabtmmargin"></a>
+	  	<a href="https://cloud.githubusercontent.com/assets/7109481/10264174/da1eecd0-69c1-11e5-8161-b008b36d826e.png" data-lightbox="image-7" data-title="A screenshot from our Fund Accounting product"><img src="https://cloud.githubusercontent.com/assets/7109481/10264174/da1eecd0-69c1-11e5-8161-b008b36d826e.png" id="xtrabtmmargin"></a>
 
-      	<a href="img/DFheartrate.png" data-lightbox="image-3" data-title="Digifit Redesign Concept"><img src="img/DFheartrate.png"></a>
+      	<a href="https://cloud.githubusercontent.com/assets/7109481/10264162/d9f11562-69c1-11e5-9e3c-3d7efbcfdef3.png" data-lightbox="image-3" data-title="Digifit Redesign Concept"><img src="https://cloud.githubusercontent.com/assets/7109481/10264162/d9f11562-69c1-11e5-9e3c-3d7efbcfdef3.png"></a>
 
 
 
-	  	<a href="img/Dlogo.png" data-lightbox="image-5" data-title="Personal Logo"><img src="img/Dlogo.png"></a>
+	  	<a href="https://cloud.githubusercontent.com/assets/7109481/10264182/da35cf4a-69c1-11e5-8121-c7bc637e8f4c.png" data-lightbox="image-5" data-title="Personal Logo"><img src="https://cloud.githubusercontent.com/assets/7109481/10264182/da35cf4a-69c1-11e5-8121-c7bc637e8f4c.png"></a>
 
 	  	<!-- <a href="img/macsite2.PNG" data-lightbox="image-6" data-title="The last version of my personal site"><img src="img/macsite.png"></a> -->
 
 
-	  	<a href="img/deadeyesmodal.png" data-lightbox="image-8" data-title="A Helpful Error Message"><img src="img/deadeyesmodal.png"></a>
+	  	<a href="https://cloud.githubusercontent.com/assets/7109481/10264176/da2256ae-69c1-11e5-8d85-5b74942a9b80.png" data-lightbox="image-8" data-title="A Helpful Error Message"><img src="https://cloud.githubusercontent.com/assets/7109481/10264176/da2256ae-69c1-11e5-8d85-5b74942a9b80.png"></a>
 
-	  	<a href="img/blueblue.png" data-lightbox="image-4" data-title="TPPT Mobile App Screen"><img src="img/TPPTMobile.png"></a>
+	  	<a href="https://cloud.githubusercontent.com/assets/7109481/10264175/da20be5c-69c1-11e5-9612-cfd6901b5b77.png" data-lightbox="image-4" data-title="TPPT Mobile App Screen"><img src="https://cloud.githubusercontent.com/assets/7109481/10264189/da555018-69c1-11e5-9725-6b0abedeca0c.png"></a>
 
-	  	<a href="img/acquisitionsMBP2.png" data-lightbox="image-9" data-title="Library Administrators love configurations!"><img src="img/acquisitionsMBP.png"></a>
+	  	<a href="https://cloud.githubusercontent.com/assets/7109481/10264177/da24cc72-69c1-11e5-91ad-b220bafff66e.png" data-lightbox="image-9" data-title="Library Administrators love configurations!"><img src="https://cloud.githubusercontent.com/assets/7109481/10264186/da438694-69c1-11e5-99dc-e690e1e90195.png"></a>
 
 
 
