--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@ else window.addEventListener('load', __ldinsp, false);
   	  <div class="contact_buttons">
   	  Get in Touch
   		<ul>
-  			<li><a href=http://www.twitter.com/danaanclarke><img src="img/twitter.png"></a></li>
-  			<li><a href=http://www.dribbble.com/danaanclarke><img src="img/dribbble.png"></a></li>
-  			<li><a href=http://www.linkedin.com/in/danaanclarke><img src="img/linkedin.png"></a></li>
-  			<li><a href=mailto:danaanclarke@gmail.com><img src="img/email.png"></a></li>
+  			<li><a href=http://www.twitter.com/danaanclarke><img src="https://cloud.githubusercontent.com/assets/7109481/10264168/da064e0a-69c1-11e5-9a13-4f11ab1d1ee8.png"></a></li>
+  			<li><a href=http://www.dribbble.com/danaanclarke><img src="https://cloud.githubusercontent.com/assets/7109481/10264167/da045294-69c1-11e5-9a80-79f893291c53.png"></a></li>
+  			<li><a href=http://www.linkedin.com/in/danaanclarke><img src="https://cloud.githubusercontent.com/assets/7109481/10264166/d9fffece-69c1-11e5-8576-06e1d220fa9b.png"></a></li>
+  			<li><a href=mailto:danaanclarke@gmail.com><img src="https://cloud.githubusercontent.com/assets/7109481/10264165/d9f8c2b2-69c1-11e5-93f3-6d0771ef3760.png"></a></li>
   		</ul>
   	  </div>
   	</div>
