--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
 	<link href="css/lightbox.css" rel="stylesheet" />
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
-	<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+	<link rel="icon" type="image/png" href="https://cloud.githubusercontent.com/assets/7109481/10264434/b1a3233c-69c8-11e5-8a01-38f2601c023c.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="https://cloud.githubusercontent.com/assets/7109481/10264435/b1a49ac8-69c8-11e5-8de0-990a7cde1890.png" sizes="16x16" />
     <script type="text/javascript" src="//use.typekit.net/wkc0tin.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     <script>
