--- a/index.html
+++ b/index.html
@@ -1,122 +1,60 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Danaan Clarke | UX UI Designer</title>
-	<link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
-	<link href="css/lightbox.css" rel="stylesheet" />
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
-	<link rel="icon" type="image/png" href="https://cloud.githubusercontent.com/assets/7109481/10264434/b1a3233c-69c8-11e5-8a01-38f2601c023c.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="https://cloud.githubusercontent.com/assets/7109481/10264435/b1a49ac8-69c8-11e5-8de0-990a7cde1890.png" sizes="16x16" />
-    <script type="text/javascript" src="//use.typekit.net/wkc0tin.js"></script>
-	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-    <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-42353042-1', 'auto');
-  ga('send', 'pageview');
+  <!-- Basic Page Needs
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta charset="utf-8">
+  <title>Danaan Clarke, Designer</title>
+  <meta name="description" content="">
+  <meta name="author" content="Danaan Clarke">
 
-</script>
-<!-- Begin Inspectlet Embed Code -->
-<script type="text/javascript" id="inspectletjs">
-window.__insp = window.__insp || [];
-__insp.push(['wid', 809111694]);
-(function() {
-function __ldinsp(){var insp = document.createElement('script'); insp.type = 'text/javascript'; insp.async = true; insp.id = "inspsync"; insp.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://cdn.inspectlet.com/inspectlet.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(insp, x); }
-if (window.attachEvent) window.attachEvent('onload', __ldinsp);
-else window.addEventListener('load', __ldinsp, false);
-})();
-</script>
-<!-- End Inspectlet Embed Code -->
+  <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- FONT
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  
+
+  <!-- CSS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <!-- Favicon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="icon" type="image/png" href="/img/favicon.png">
+
 </head>
-
 <body>
-  <nav class="nav" id="home">
-  	<ul>
-  	  <li><a href= "#contact">CONTACT</a></li>
-  	  <li><a href= "#about">ABOUT</a></li>
-  	  <li><a href= "#portfolio">PORTFOLIO</a></li>
-  	  <li><a href= "#home">HOME</a></li>
-  	</ul>
-  </nav>
-  <div class="banner">
-	    <div class="name">
-	      DANAAN CLARKE
-	    </div>
-	    <div class="job_title">
-	      User Centered Designer
-	    </div>
-	  <div class="centered">
-	  <img class="screens" src="https://cloud.githubusercontent.com/assets/7109481/10264169/da094be6-69c1-11e5-9d62-d7eb39e2c15f.png">
-	    <div class="heading_title">
-	    	Everyone Deserves a Great Experience
-	    </div>
-	  </div>
-	  <!-- <div>
-	  	<img src="img/imac3.png">
-	  </div> -->
-	</div>
-  <div class="work" id="portfolio">
-  	<div class="work_title">
-  		Some Recent Work
-  	</div>
-  	  <div class="images">
 
-  	  	<a href="https://cloud.githubusercontent.com/assets/7109481/10264160/d9ea8fd0-69c1-11e5-90f9-7bf3f6fb8cf9.png" data-lightbox="image-10" data-title="Approving videos to be captioned"><img src="https://cloud.githubusercontent.com/assets/7109481/10264161/d9ee666e-69c1-11e5-825d-c2791184074e.png"></a>
+  <!-- Primary Page Layout
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <div class="container">
 
-  	  	<a href="https://cloud.githubusercontent.com/assets/7109481/10264163/d9f3d2d4-69c1-11e5-8df4-a4aff2462091.png" data-lightbox="image-2" data-title="Digifit Redesign Concept"><img src="https://cloud.githubusercontent.com/assets/7109481/10264163/d9f3d2d4-69c1-11e5-8df4-a4aff2462091.png"></a>
+    <div class="header">
+      <h2>Danaan Clarke</h2>
+      <h1><span style="color:orange">Designer</span> at Instructure</h1>
+      <div class="box"></div>
+    </div>
 
-  		<a href="https://cloud.githubusercontent.com/assets/7109481/10264180/da325dd8-69c1-11e5-89a2-2fd15714e952.png" data-lightbox="image-1" data-title="I designed &amp; built this web app as my final project for DevMountain"><img src="https://cloud.githubusercontent.com/assets/7109481/10264185/da43363a-69c1-11e5-8932-ef7e7db860af.png"></a>
+    <p class="p1">I’m a designer based in Salt Lake City working for Instructure on the Product Design team. We make software that makes people smarter.</p>
+    <p class="p2">I’ve had the good fortune to work on enterprise software that’s used all over the world in libraries, schools, and businesses. Check out some of my work below and get in touch if we can work together.</p>
 
-  		<!-- <a href="img/TIPPTCreateanEvent2.png" data-lightbox="image-1" data-title="The app allows you to create crowdsourced events"><img src="img/TIPPTcreate.png"></a> -->
-
-  		<!-- <a href="img/TIPPTworks2.png" data-lightbox="image-1" data-title="My goal was to keep it to one page. This is the about section"><img src="img/TIPPTabout.png"></a> -->
-
-	  	<a href="https://cloud.githubusercontent.com/assets/7109481/10264174/da1eecd0-69c1-11e5-8161-b008b36d826e.png" data-lightbox="image-7" data-title="A screenshot from our Fund Accounting product"><img src="https://cloud.githubusercontent.com/assets/7109481/10264174/da1eecd0-69c1-11e5-8161-b008b36d826e.png" id="xtrabtmmargin"></a>
-
-      	<a href="https://cloud.githubusercontent.com/assets/7109481/10264162/d9f11562-69c1-11e5-9e3c-3d7efbcfdef3.png" data-lightbox="image-3" data-title="Digifit Redesign Concept"><img src="https://cloud.githubusercontent.com/assets/7109481/10264162/d9f11562-69c1-11e5-9e3c-3d7efbcfdef3.png"></a>
-
-
-
-	  	<a href="https://cloud.githubusercontent.com/assets/7109481/10264182/da35cf4a-69c1-11e5-8121-c7bc637e8f4c.png" data-lightbox="image-5" data-title="Personal Logo"><img src="https://cloud.githubusercontent.com/assets/7109481/10264182/da35cf4a-69c1-11e5-8121-c7bc637e8f4c.png"></a>
-
-	  	<!-- <a href="img/macsite2.PNG" data-lightbox="image-6" data-title="The last version of my personal site"><img src="img/macsite.png"></a> -->
-
-
-	  	<a href="https://cloud.githubusercontent.com/assets/7109481/10264176/da2256ae-69c1-11e5-8d85-5b74942a9b80.png" data-lightbox="image-8" data-title="A Helpful Error Message"><img src="https://cloud.githubusercontent.com/assets/7109481/10264176/da2256ae-69c1-11e5-8d85-5b74942a9b80.png"></a>
-
-	  	<a href="https://cloud.githubusercontent.com/assets/7109481/10264175/da20be5c-69c1-11e5-9612-cfd6901b5b77.png" data-lightbox="image-4" data-title="TPPT Mobile App Screen"><img src="https://cloud.githubusercontent.com/assets/7109481/10264189/da555018-69c1-11e5-9725-6b0abedeca0c.png"></a>
-
-	  	<a href="https://cloud.githubusercontent.com/assets/7109481/10264177/da24cc72-69c1-11e5-91ad-b220bafff66e.png" data-lightbox="image-9" data-title="Library Administrators love configurations!"><img src="https://cloud.githubusercontent.com/assets/7109481/10264186/da438694-69c1-11e5-99dc-e690e1e90195.png"></a>
-
-
-
-	  </div>
-	</div>
-  <div class="aboutme" id="about">
-  	<div class="aboutme_title">
-  		About Me
-  	</div>
-  	<img src="https://cloud.githubusercontent.com/assets/7109481/10264190/da591482-69c1-11e5-8536-835dc35d2b45.png">
-  	<p>I&#8217;m not an artist or a creative&mdash;I&#8217;m a Designer. I work hard with collaborative teams to solve problems for users, whether it&#8217;s a tricky navigation, a hard to find action, or a lack of consistency in the UI. My unique education coupled with my experience with the enterprise means I&#8217;m ready to get to work. I use Sketch whenever I can, jumping into Illustrator or Photoshop when needed. I&#8217;m comfortable with HTML and CSS, and can handle myself with JavaScript. I love what I do, and look forward to tomorrow&#8217;s challenges. </p>
+    <ul class="connect-icons">
+      <li><a class="dribbble" href="https://www.dribbble.com/danaanclarke"></a></li>
+      <li><a class="twitter" href="https://www.twitter.com/danaanclarke"></a></li>
+      <li><a class="linkedin" href="https://www.linkedin.com/in/danaanclarke"></a></li>
+    </ul>
   </div>
-  <div class="contact" id="contact">
-  	<!-- <div class="contact_title"> -->
-  	  <!-- Get in Touch -->
-  	  <div class="contact_buttons">
-  	  Get in Touch
-  		<ul>
-  			<li><a href=http://www.twitter.com/danaanclarke><img src="https://cloud.githubusercontent.com/assets/7109481/10264168/da064e0a-69c1-11e5-9a13-4f11ab1d1ee8.png"></a></li>
-  			<li><a href=http://www.dribbble.com/danaanclarke><img src="https://cloud.githubusercontent.com/assets/7109481/10264167/da045294-69c1-11e5-9a80-79f893291c53.png"></a></li>
-  			<li><a href=http://www.linkedin.com/in/danaanclarke><img src="https://cloud.githubusercontent.com/assets/7109481/10264166/d9fffece-69c1-11e5-8576-06e1d220fa9b.png"></a></li>
-  			<li><a href=mailto:danaanclarke@gmail.com><img src="https://cloud.githubusercontent.com/assets/7109481/10264165/d9f8c2b2-69c1-11e5-93f3-6d0771ef3760.png"></a></li>
-  		</ul>
-  	  </div>
-  	</div>
-  </div>
-  <script src="js/jquery-1.11.0.min.js"></script>
-  <script src="js/lightbox.min.js"></script>
+
+
+
+
+
+
+
+<!-- End Document
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 </html>
