--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@ setTimeout(ldinsp, 500); document.readyState != "complete" ? (window.attachEvent
 
     <div class="header">
       <h2>Danaan Clarke</h2>
-      <h1><span style="color:orange">Designer</span> at Instructure</h1>
+      <h1><span style="color:orange">Designer</span> at Canopy Tax</h1>
       <div class="box"></div>
     </div>
 
-    <p class="p1">I’m a designer based in Salt Lake City working for Instructure on the Product Design team. We make software that makes people smarter.</p>
+    <p class="p1">I’m a designer based in Salt Lake City working for Canopy Tax on the Product Design team.</p>
     <p class="p2">I’ve had the good fortune to work on enterprise software that’s used all over the world in libraries, schools, and businesses. Check out some of my work below and get in touch if we can work together.</p>
 
     <ul class="connect-icons">
