--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ setTimeout(ldinsp, 500); document.readyState != "complete" ? (window.attachEvent
 
     <div class="header">
       <h2>Danaan Clarke</h2>
-      <h1><span style="color:orange">Designer</span> at Canopy Tax</h1>
+      <h1><span style="color:orange">Designer</span> at Canopy</h1>
       <div class="box"></div>
     </div>
 
