--- a/index.html
+++ b/index.html
@@ -45,16 +45,14 @@ setTimeout(ldinsp, 500); document.readyState != "complete" ? (window.attachEvent
 
     <div class="header">
       <h2>Danaan Clarke</h2>
-      <h1><span style="color:#00BF4B">Designer</span> at Canopy</h1>
+      <h1><span style="color:#00BF4B">Designer</span> at Pluralsight</h1>
       <div class="box"></div>
     </div>
 
-    <p class="p1">I’m a designer based in Salt Lake City working for Canopy Tax on the Product Design team.</p>
-    <p class="p2">I’ve had the good fortune to work on enterprise software that’s used all over the world in libraries, schools, and businesses. Check out some of my work below and get in touch if we can work together.</p>
+    <p class="p1">I’m a Principal Designer working for Pluralsight on the Skills app.</p>
+    <p class="p2">I’ve worked with world-class teams, building software that’s used all over the world in libraries, schools, and businesses. Get in touch if we can work together.</p>
 
     <ul class="connect-icons">
-      <li><a class="dribbble" href="https://www.dribbble.com/danaanclarke"></a></li>
-      <li><a class="twitter" href="https://www.twitter.com/danaanclarke"></a></li>
       <li><a class="linkedin" href="https://www.linkedin.com/in/danaanclarke"></a></li>
     </ul>
   </div>
