--- a/index.html
+++ b/index.html
@@ -42,15 +42,13 @@ setTimeout(ldinsp, 500); document.readyState != "complete" ? (window.attachEvent
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
+    <!-- <div class="header"> -->
+      <h1>Danaan Clarke</h1>
+      <h2><span style="color:#277ff2">Product Designer</span> at Pluralsight</h2>
+    <!-- </div> -->
 
-    <div class="header">
-      <h2>Danaan Clarke</h2>
-      <h1><span style="color:#00BF4B">Designer</span> at Pluralsight</h1>
-      <div class="box"></div>
-    </div>
-
-    <p class="p1">I’m a Principal Designer working for Pluralsight on the Skills app.</p>
-    <p class="p2">I’ve worked with world-class teams, building software that’s used all over the world in libraries, schools, and businesses. Get in touch if we can work together.</p>
+    <p class="p1">I’m a Principal Designer working with the world-class Pluralsight Skills team. Over the course of my career, I've designed experiences used by businesses, libraries, and schools across the globe. </p>
+    <p class="p2">Check out my experience on LinkedIn, or shoot me a message and I can share my portfolio. Thanks for stopping by!</p>
 
     <ul class="connect-icons">
       <li><a class="linkedin" href="https://www.linkedin.com/in/danaanclarke"></a></li>
