--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
   <link rel="stylesheet" href="css/styles.css">
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="/img/favicon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 
 <!-- Begin Inspectlet Embed Code -->
 <script type="text/javascript" id="inspectletjs">
@@ -42,21 +45,16 @@ setTimeout(ldinsp, 500); document.readyState != "complete" ? (window.attachEvent
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
-    <!-- <div class="header"> -->
+      
       <h1>Danaan Clarke</h1>
       <h2><span style="color:#3159EA">Product Designer</span> at Pluralsight</h2>
-    <!-- </div> -->
 
-    <p class="p1">I’m a Principal Designer working with the world-class Pluralsight Skills team. Over the course of my career, I've designed experiences used by businesses, libraries, and schools across the globe. </p>
-    <!-- <p class="p2">Check out my experience on LinkedIn, or shoot me a message and I can share my portfolio. Thanks for stopping by!</p> -->
+    <p>I’m a Principal Designer working with the world-class Pluralsight Skills team. Over the course of my career, I've designed experiences used by businesses, libraries, and schools across the globe. </p>
 
     <a class="btn2" href="https://www.figma.com/proto/zNl3H0d06DqjZjNJYTOubl/Danaan-Clarke-Portfolio?page-id=18%3A7400&type=design&node-id=18-7401&viewport=1259%2C2909%2C0.74&scaling=scale-down-width&starting-point-node-id=18%3A7401&hotspot-hints=0&hide-ui=1">
       View my portfolio
     </a>
 
-<!--     <ul class="connect-icons">
-      <li><a class="linkedin" href="https://www.linkedin.com/in/danaanclarke"></a></li>
-    </ul> -->
   </div>
 
 
