--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -47,9 +49,9 @@ setTimeout(ldinsp, 500); document.readyState != "complete" ? (window.attachEvent
   <div class="container">
       
       <h1>Danaan Clarke</h1>
-      <h2><span style="color:#3159EA">Product Designer</span> at Pluralsight</h2>
+      <h2><span style="color:#3159EA">Product Designer</span> @ Pluralsight</h2>
 
-    <p>I’m a Principal Designer working with the world-class Pluralsight Skills team. Over the course of my career, I've designed experiences used by businesses, libraries, and schools across the globe. </p>
+    <p>I’m a Principal Product Designer working with the world-class Pluralsight Skills team. Over the course of my career, I've designed experiences for users of businesses, libraries, and schools across the globe. </p>
 
     <a class="btn2" href="https://www.figma.com/proto/zNl3H0d06DqjZjNJYTOubl/Danaan-Clarke-Portfolio?page-id=18%3A7400&type=design&node-id=18-7401&viewport=1259%2C2909%2C0.74&scaling=scale-down-width&starting-point-node-id=18%3A7401&hotspot-hints=0&hide-ui=1">
       View my portfolio
