--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <title>Danaan Clarke, Designer</title>
   <meta name="description" content="">
   <meta name="author" content="Danaan Clarke">
+ 
+  <!-- Redirect to Figma portfolio
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta http-equiv="refresh" content="0; URL=https://www.figma.com/proto/zNl3H0d06DqjZjNJYTOubl/Danaan-Clarke-Portfolio?page-id=18%3A7400&type=design&node-id=18-7401&viewport=1259%2C2909%2C0.74&scaling=scale-down-width&starting-point-node-id=18%3A7401&hotspot-hints=0&hide-ui=1"/>
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
