--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ setTimeout(ldinsp, 500); document.readyState != "complete" ? (window.attachEvent
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
+<!--   <div class="container">
       
       <h1>Danaan Clarke</h1>
       <h2><span style="color:#3159EA">Product Designer</span> @ Pluralsight</h2>
@@ -61,7 +61,7 @@ setTimeout(ldinsp, 500); document.readyState != "complete" ? (window.attachEvent
       View my portfolio
     </a>
 
-  </div>
+  </div> -->
 
 
 
