--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  
   <!-- Redirect to Figma portfolio
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta http-equiv="refresh" content="0; URL=https://www.figma.com/proto/zNl3H0d06DqjZjNJYTOubl/Danaan-Clarke-Portfolio?page-id=841%3A4579&node-id=841-4581&viewport=12%2C239%2C0.09&t=3NeuwhkJzDfVXGzR-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=841%3A4581"/>
+  <meta http-equiv="refresh" content="0; URL="https://danaanclarkeportfolio.framer.website"/>
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
