--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  
   <!-- Redirect to Figma portfolio
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta http-equiv="refresh" content="0; URL="https://danaanclarkeportfolio.framer.website"/>
+  <meta http-equiv="refresh" content="0; URL=https://danaanclarkeportfolio.framer.website"/>
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
